// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Provider Component allows to overwrite inject values with props 1`] = `
<div>
  <div><span class="test-span">test message</span></div>
</div>
`;

exports[`The Provider Component allows to remap property names between props & inject 1`] = `
<div>
  <div><span class="test-span">test message</span></div>
</div>
`;

exports[`The Provider Component inject mode 1`] = `
<div>
  <div><span class="test-span">test message Injected</span></div>
</div>
`;

exports[`The Provider Component re-renders when reactive data is changed 1`] = `
<div>
  <div><span class="test-span">new test message</span></div>
</div>
`;

exports[`The Provider Component works 1`] = `
<div>
  <div><span class="test-span">test message</span></div>
</div>
`;
